# virfold

./: .dockerignore  .env  .gitignore  README.md  pyproject.toml
agent/prompts/: prompts.py
agents/: agent_data_analyst.py  agent_insulation_streaming.py  agent_q_a.py  agent_q_a_streaming.py  agent_workflow_data_analyst.py
agents/prompts/: prompts.py
agents/tools/: tool_code_runner.py  tool_retrieve_manual_pages.py  tools_agent_insulation.py
docker/base/code_execution/: .dockerignore  Dockerfile  db_health_check.py  entrypoint.sh  requirements.txt
docker/base/ts_database/: Dockerfile  init.sql
docker/dev/: .env.example  docker-compose.yaml  llamaindex_api_integration_guide.md
docker/dev/api/: Dockerfile  health_check.py  main.py  workflow_to_api_insights.md
docker/dev/api/routers/: data_analyst.py
docker/dev/app/: Dockerfile  dashboard-charts.tsx  dashboard.tsx  globals.css  main.py  message-box.tsx  next.config.mjs  package.json  page.tsx  requirements.txt  sensor-map.tsx
docker/dev/app/app/: layout.tsx
docker/dev/ts_api/: Dockerfile  data_generator.py  health_check.py  main.py  requirements.txt  start.sh
embed/: embed_manual.py
retrievers/: retriever_baseline.py
ui/: insulation_app_streaming.py  search_app.py  search_app_streaming.py
