[tool.poetry]
name = "virfold"
version = "0.1.0"
description = ""
authors = ["dsaks9 <delonsaks@berkeley.edu>"]
readme = "README.md"
packages = [
    {include = "embed"},
    {include = "agent"},
    {include = "retrievers"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
llama-index-core = "^0.12.5"
llama-parse = "^0.5.17"
llama-index-embeddings-nvidia = "^0.3.0"
llama-index-vector-stores-qdrant = "^0.4.0"
openai = "^1.57.4"
llama-index-embeddings-openai = "^0.3.1"
fastembed = "^0.4.2"
arize-phoenix-otel = "^0.6.1"
openinference-instrumentation-llama-index = "^3.1.0"
llama-index-postprocessor-cohere-rerank = "^0.3.0"
llama-index-llms-anthropic = "^0.6.1"
llama-index-multi-modal-llms-anthropic = "^0.3.0"
llama-index-readers-file = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
